<?xml version="1.0"?>
<package format="2">
  <name>perception_data</name>
  <version>0.1.0</version>
  <description>The perception_data package</description>

  <maintainer email="lz@todo.todo">lz</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/perception_data</url>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
