<?xml version="1.0"?>
<package format="2">

  <name>ads_msgs</name>
  <version>0.0.0</version>
  <description>The ads_msgs package</description>
  <maintainer email="ads_team@deepbludai.com">ads_team</maintainer>
  <author>ads_team</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>:x

  <build_depend>jsk_recognition_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
